improvements from CR